--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
       </ul>
       <div id="show-login-menu">
         <button style="width:100px !important;  padding:4px; margin:4px; margin-left:10px; margin-bottom:10px;font-weight:bold" onclick="callmodalLogin();showLogin()">Login</button>
-        <button style="width:100px !important; padding:4px; margin:4px; font-weight:bold" onclick="javascript:callmodal();showRegistration()">Sign Up</button>
+        <button style="width:100px !important; padding:4px; margin:4px; font-weight:bold" onclick="javascript:callmodalLogin();showRegistration()">Sign Up</button>
         <span style="font-size:13px; font-weight:normal; color:#ff6600">Only one login to access all my tools, join now, it's free!</span>
       </div>
       <div id="homepage" class="hide">
