--- a/login/index.html
+++ b/login/index.html
@@ -537,9 +537,9 @@
 	        <div class="forms-out">
           <div class="forms-in">  
 	   <h2>CHANGE PASSWORD</h2><br><br>
-             <label>New Password</label>
+             <label>New Password <span style="color:#ff6600">*</span></label>
               <input type="password" id="new-password" placeholder="New Password">
-              <label>Confirm Password</label>
+              <label>Confirm Password <span style="color:#ff6600">*</span></label>
               <input type="password" id="re-new-password" placeholder="Confirm New Password">
               <button style="width:150px !important;" id="change-pass-button">Change Now</button>
 			  <button style="width:150px !important;" onclick="CallModalChangePasswordHide()" >Cancel</button>
