--- a/login/index.html
+++ b/login/index.html
@@ -528,7 +528,7 @@
 		<br><br>
 		<button  id="signout">Logout</button>
 		<button  onclick="CallModalChangePasswordShow()">Set New Password</button>
-        <button  id="delete-user">Delete Account</button>
+        <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
       </div>
 	  </div> 
 	  
