--- a/login/index.html
+++ b/login/index.html
@@ -379,8 +379,7 @@
       background-color: rgba(0, 0, 0, 0.5);
       /* Black w/ opacity */
       }	  
-	  
-	  .modal-change-password {
+      .modal-change-password {
       display: none;
       /* Hidden by default */
       position: fixed;
@@ -402,7 +401,6 @@
       background-color: rgba(0, 0, 0, 0.5);
       /* Black w/ opacity */
       }	  
-	  
       .lock-screen {
       display: none;
       /* Hidden by default */
@@ -515,43 +513,40 @@
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
       </ul>
-
     </div>
-	
-	  
-  <div id="myProfile" class="modal-profile">
-	<div id="homepage" style="width: 700px;" class="modal-content">
-	   <h2>USER PROFILE</h2><br><br><br>
-	   	<span style="font-weight:bole; font-size:14px">USER UID: <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
+    <div id="myProfile" class="modal-profile">
+      <div id="homepage" style="width: 700px;" class="modal-content">
+        <h2>USER PROFILE</h2>
+        <br><br><br>
+        <span style="font-weight:bole; font-size:14px">USER UID: <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
         <span style="font-weight:bold;font-size:14px">IDENTIFIER E-MAIL: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">E-MAIL ACTIVATED: [ <span id="email_Verified"></span> ]</span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br>
-		<br><br>
-		<button style="margin-bottom:20px" id="signout">Logout</button>
-		<button  onclick="CallModalChangePasswordShow()">Set New Password</button>
+        <br><br>
+        <button style="margin-bottom:20px" id="signout">Logout</button>
+        <button  onclick="CallModalChangePasswordShow()">Set New Password</button>
         <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
       </div>
-	  </div> 
-	  
-	<div id="myChangePassword" class="modal-change-password">
-	<div style="width: 400px;" class="modal-content">
-	        <div class="forms-out">
-          <div class="forms-in">  
-	   <h2>CHANGE PASSWORD</h2><br><br>
-             <label>New Password <span style="color:#ff6600">*</span></label>
-              <input type="password" id="new-password" placeholder="New Password">
-              <label>Confirm Password <span style="color:#ff6600">*</span></label>
-              <input type="password" id="re-new-password" placeholder="Confirm New Password">
-              <button style="width:150px !important;margin-bottom:20px" id="change-pass-button">Change Now</button>
-			  <button style="width:150px !important;" onclick="CallModalChangePasswordHide()" >Cancel</button>
+    </div>
+    <div id="myChangePassword" class="modal-change-password">
+      <div style="width: 400px;" class="modal-content">
+        <div class="forms-out">
+          <div class="forms-in">
+            <h2>CHANGE PASSWORD</h2>
+            <br><br>
+            <label>New Password <span style="color:#ff6600">*</span></label>
+            <input type="password" id="new-password" placeholder="New Password">
+            <label>Confirm Password <span style="color:#ff6600">*</span></label>
+            <input type="password" id="re-new-password" placeholder="Confirm New Password">
+            <button style="width:150px !important;margin-bottom:20px" id="change-pass-button">Change Now</button>
+            <button style="width:150px !important;" onclick="CallModalChangePasswordHide()" >Cancel</button>
+          </div>
+        </div>
       </div>
-	  </div> 
-	   </div>
-	  </div> 
-	  
+    </div>
     <div id="myLogin" class="modal-login">
       <div style="width: 400px;" class="modal-content">
         <div class="forms-out">
-          <div class="forms-in">  
+          <div class="forms-in">
             <div id="registration-page" class="hide">
               <h2>SIGN UP</h2>
               <br><br>
