--- a/index.html
+++ b/index.html
@@ -550,8 +550,8 @@
       </div>
       <div id="homepage" class="hide">
         <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-		<button id="ShowProfile" style="width:80px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="window.open('https://buananetpbun.github.io/login', '_blank');">Profile</button>
-        <span style="font-weight:normal;font-size:14px">MEMBER: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+		<button id="ShowProfile" style="width:80px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="window.open('https://buananetpbun.github.io/login', '_blank');">Member Area</button>
+        <span style="font-weight:normal;font-size:14px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
         <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button>
 		
@@ -748,7 +748,7 @@
             <div id="registration-page" class="hide">
               <span style="font-size:23px !important;color:#ff6600;">SIGN UP</span>
               <br><br>
-              <label>E-Mail <span style="color:#ff6600">*</span> </label>
+              <label>E-Mail <span style="color:#ff6600">*</span></label>
               <input style="margin-top:5px" type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
               <input style="margin-top:5px" type="email" id="registration-reemail" autocomplete="off" placeholder="Confirm E-Mail">
