--- a/login/index.html
+++ b/login/index.html
@@ -516,7 +516,7 @@
     </div>
     <div id="myProfile" class="modal-profile">
       <div id="homepage" style="width: 700px;" class="modal-content">
-        <h2>USER PROFILE</h2>
+        <h2>MEMBER PROFILES</h2>
         <br><br><br>
         <span style="font-weight:bole; font-size:14px">USER UID: <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
         <span style="font-weight:bold;font-size:14px">IDENTIFIER E-MAIL: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
