--- a/login/index.html
+++ b/login/index.html
@@ -523,7 +523,7 @@
         <span style="font-weight:bold; font-size:14px">E-MAIL ACTIVATED: [ <span id="email_Verified"></span> ]</span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br>
         <br><br>
         <button style="margin-bottom:20px" id="signout">Logout</button>
-        <button  onclick="CallModalChangePasswordShow()">Set New Password</button>
+        <button  onclick="CallModalChangePasswordShow()">Change Password</button>
         <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
       </div>
     </div>
