--- a/login/index.html
+++ b/login/index.html
@@ -516,9 +516,9 @@
     </div>
     <div id="myProfile" class="modal-profile">
       <div id="homepage" style="width: 700px;" class="modal-content">
-        <h2>MEMBER PROFILES</h2>
+        <span style="font-weight:bold; font-size:25px; color:#fff">PROFILE MEMBER</span>
         <br><br><br>
-        <span style="font-weight:bole; font-size:14px">USER UID: <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
+        <span style="font-weight:bold; font-size:14px">USER UID: <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
         <span style="font-weight:bold;font-size:14px">IDENTIFIER E-MAIL: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">E-MAIL ACTIVATED: [ <span id="email_Verified"></span> ]</span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br>
         <br><br>
