--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -282,7 +282,7 @@
       </ul>
       <div id="homepage" class="hide">
         <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-        <span style="font-weight:normal;font-size:14px">MEMBER-ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+        <span style="font-weight:normal;font-size:14px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>	
       </div>
     </div>
@@ -413,11 +413,11 @@
             <div id="registration-page" class="hide">
               <h2>SIGN UP</h2>
               <br><br>
-              <label>E-Mail <label>E-Mail <span style="color:#ff6600">*</span></label><span style="color:#ff6600">*</span></label>
+              <label>E-Mail <span style="color:#ff6600">*</span></label>
               <input type="email" id="registration-email" placeholder="E-Mail">
-              <label>Confirm E-mail <label>E-Mail <span style="color:#ff6600">*</span></label><span style="color:#ff6600">*</span></label> 
+              <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
               <input type="email" id="registration-reemail" autocomplete="off" placeholder="Confirm E-Mail">
-              <label>Password <label>E-Mail <span style="color:#ff6600">*</span></label><span style="color:#ff6600">*</span><span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
+              <label>Password <span style="color:#ff6600">*</span><span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
               <input type="password" id="registration-password" placeholder="Password">
               <button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
