--- a/login/index.html
+++ b/login/index.html
@@ -516,15 +516,17 @@
     </div>
     <div id="myProfile" class="modal-profile">
       <div id="homepage" style="width: 700px;" class="modal-content">
-        <span style="font-weight:bold; font-size:25px; color:#fff">PROFILE</span>
+        <span style="font-weight:bold; font-size:25px; color:#fff">PROFILE - <span id="profile-email" style="color:#fff"></span></span>
         <br><br>
-        <span style="font-weight:bold; font-size:14px">USER UID: <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
-        <span style="font-weight:bold;font-size:14px">IDENTIFIER E-MAIL: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
-        <span style="font-weight:bold; font-size:14px">E-MAIL ACTIVATED: [ <span id="email_Verified"></span> ]</span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br>
-        <br><br>
-        <button style="margin-bottom:20px" id="signout">Logout</button>
-        <button  onclick="CallModalChangePasswordShow()">Change Password</button>
+        <span style="font-weight:bold; font-size:14px">USER UID : <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
+        <span style="font-weight:bold;font-size:14px">IDENTIFIER E-MAIL : <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
+        <span style="font-weight:bold; font-size:14px">E-MAIL AUTHENTICATION : <span id="email_Verified"></span></span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br><br>
+		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="user-name">n/a</span></span><br><br>
+		<span style="font-weight:bold; font-size:14px">CONTACT / WHATSAPP : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br><br>
+        <button id="edit-user" onclick="Alert.render('Sorry :( Under Construction.')">Edit Profile</button>
+		<button  onclick="CallModalChangePasswordShow()">Change Password</button>
         <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
+		<button style="margin-bottom:20px" id="signout">Logout</button>
       </div>
     </div>
     <div id="myChangePassword" class="modal-change-password">
@@ -536,7 +538,7 @@
             <label>New Password <span style="color:#ff6600">*</span></label>
             <input type="password" id="new-password" placeholder="New Password">
             <label>Confirm Password <span style="color:#ff6600">*</span></label>
-            <input type="password" id="re-new-password" placeholder="Confirm New Password">
+            <input type="password" id="re-new-password" autocomplete="off" placeholder="Confirm New Password">
             <button style="width:150px !important;margin-bottom:20px" id="change-pass-button">Change Now</button>
             <button style="width:150px !important;" onclick="CallModalChangePasswordHide()" >Cancel</button>
           </div>
