--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
       </div>
       <div id="homepage" class="hide">
         <button style="width:75px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-		<button id="ShowProfile" style="width:115px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="window.open('https://buananetpbun.github.io/login', '_blank');">Member Area</button>
+		<button id="ShowProfile" style="width:115px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="window.open('https://buananetpbun.github.io/login')">Member Area</button>
         <span style="font-weight:normal;font-size:14px">ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
         <button id="verify" style="width:170px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button>
