--- a/login/index.html
+++ b/login/index.html
@@ -536,11 +536,11 @@
         <span style="font-weight:bold; font-size:25px; color:#fff">PROFILE - <span id="profile-email" style="color:#fff"></span></span>
         <br><br>
         <span style="font-weight:bold; font-size:14px">USER UID : <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
-        <span style="font-weight:bold;font-size:14px">IDENTIFIER E-MAIL : <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
+        <span style="font-weight:bold;font-size:14px">E-MAIL IDENTIFIER : <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">E-MAIL AUTHENTICATION : <span id="email_Verified"></span></span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br><br>
 		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="user-name">n/a</span></span><br><br>
 		<span style="font-weight:bold; font-size:14px">CONTACT / WHATSAPP : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br>
-		<span style="font-weight:bold; font-size:14px">PREMIUM STATUS : <span style="color:#ff6600;font-weight:bold;" id="user-contact">Free</span></span><br><br><br>
+		<span style="font-weight:bold; font-size:14px">PREMIUM SERVICE : <span style="color:#ff6600;font-weight:bold;" id="user-contact">Free</span></span><br><br><br>
         <button id="edit-user" onclick="Alert.render('Sorry :( Under Construction.')">Edit Profile</button>
 		<button  onclick="CallModalChangePasswordShow()">Change Password</button>
         <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
