--- a/login/index.html
+++ b/login/index.html
@@ -541,10 +541,10 @@
 		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="user-name">n/a</span></span><br><br>
 		<span style="font-weight:bold; font-size:14px">CONTACT / WHATSAPP : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br>
 		<span style="font-weight:bold; font-size:14px">PREMIUM SERVICE : <span style="color:#ff6600;font-weight:bold;" id="user-contact">Free</span></span><br><br><br>
-        <button id="edit-user" onclick="Alert.render('Sorry :( Under Construction.')">Edit Profile</button>
-		<button  onclick="CallModalChangePasswordShow()">Change Password</button>
-        <button  id="delete-user" onclick="DeleteMember()">Delete Account</button>
-		<button style="margin-bottom:10px" id="signout">Logout</button>
+        <button style="padding:8px" id="edit-user" onclick="Alert.render('Sorry :( Under Construction.')">Edit Profile</button>
+		<button style="padding:8px" onclick="CallModalChangePasswordShow()">Change Password</button>
+        <button style="padding:8px" id="delete-user" onclick="DeleteMember()">Delete Account</button>
+		<button style="margin-bottom:10px;padding:8px" id="signout">Logout</button>
       </div>
     </div>
     <div id="myChangePassword" class="modal-change-password">
