--- a/login/index.html
+++ b/login/index.html
@@ -379,6 +379,30 @@
       background-color: rgba(0, 0, 0, 0.5);
       /* Black w/ opacity */
       }	  
+	  
+	  .modal-change-profile{
+      display: none;
+      /* Hidden by default */
+      position: fixed;
+      /* Stay in place */
+      z-index: 10;
+      /* Sit on top */
+      padding-top: 80px;
+      /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%;
+      /* Full width */
+      height: 100%;
+      /* Full height */
+      overflow: auto;
+      /* Enable scroll if needed */
+      background-color: rgb(0, 0, 0);
+      /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.5);
+      /* Black w/ opacity */
+      }	  
+	  
       .modal-change-password {
       display: none;
       /* Hidden by default */
@@ -531,17 +555,17 @@
     <div id="myProfile" class="modal-profile">
       <div id="homepage" style="width: 700px;" class="modal-content">
 	    <div class="avatar">
-		<img src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png">
+		<img id="avatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png">
 		</div>
         <span style="font-weight:bold; font-size:25px; color:#fff">PROFILE - <span id="profile-email" style="color:#fff"></span></span>
         <br><br>
         <span style="font-weight:bold; font-size:14px">USER UID : <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
         <span style="font-weight:bold;font-size:14px">E-MAIL IDENTIFIER : <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">E-MAIL AUTHENTICATION : <span id="email_Verified"></span></span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br><br>
-		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="user-name">n/a</span></span><br><br>
+		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="your-name">n/a</span></span><br><br>
 		<span style="font-weight:bold; font-size:14px">CONTACT / WHATSAPP : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br>
 		<span style="font-weight:bold; font-size:14px">PREMIUM SERVICE : <span style="color:#ff6600;font-weight:bold;" id="user-contact">Free</span></span><br><br><br>
-        <button style="padding:8px" id="edit-user" onclick="Alert.render('Sorry :( Under Construction.')">Edit Profile</button>
+        <button style="padding:8px" id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
 		<button style="padding:8px" onclick="CallModalChangePasswordShow()">Change Password</button>
         <button style="padding:8px" id="delete-user" onclick="DeleteMember()">Delete Account</button>
 		<button style="margin-bottom:10px;padding:8px" id="signout">Logout</button>
@@ -563,6 +587,22 @@
         </div>
       </div>
     </div>
+    <div id="myChangeProfile" class="modal-change-profile">
+      <div style="width: 400px;" class="modal-content">
+        <div class="forms-out">
+          <div class="forms-in">
+            <h2>EDIT PROFILE</h2>
+            <br><br>
+            <label>Your Name: <span style="color:#ff6600">*</span></label>
+            <input id="profile-name" placeholder="your name">
+            <label>Your Phone: <span style="color:#ff6600">*</span></label>
+            <input id="profile-phone" autocomplete="off" placeholder="your phone">
+            <button style="width:150px !important;margin-bottom:20px" onclick="CangeProfile()">Change Now</button>
+            <button style="width:150px !important;" onclick="CallModalChangeProfileHide()" >Cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>	
     <div id="myLogin" class="modal-login">
       <div style="width: 400px;" class="modal-content">
         <div class="forms-out">
