--- a/login/index.html
+++ b/login/index.html
@@ -554,17 +554,16 @@
     </div>
     <div id="myProfile" class="modal-profile">
       <div id="homepage" style="width: 700px;" class="modal-content">
-	    <div class="avatar">
-		<img src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png">
+	    <div  class="avatar">
+		<img id="avatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png">
 		</div>
         <span style="font-weight:bold; font-size:25px; color:#fff">PROFILE - <span id="profile-email" style="color:#fff"></span></span>
         <br><br>
         
         <span style="font-weight:bold;font-size:14px">E-MAIL IDENTIFIER : <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
-        <span style="font-weight:bold; font-size:14px">E-MAIL AUTHENTICATION : <span id="email_Verified"></span></span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br><br>
+        <span style="font-weight:bold; font-size:14px">E-MAIL AUTH: <span id="email_Verified"></span></span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br><br>
 		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="your-name">n/a</span></span><br><br>
-		<span style="font-weight:bold; font-size:14px">CONTACT / WHATSAPP : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br>
-		<span style="font-weight:bold; font-size:14px">PREMIUM SERVICE : <span style="color:#ff6600;font-weight:bold;" id="user-contact">Free</span></span><br><br><br>
+		<span style="font-weight:bold; font-size:14px">CONTACT / WHATSAPP : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br><br>
         <button style="padding:8px" id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
 		<button style="padding:8px" onclick="CallModalChangePasswordShow()">Change Password</button>
         <button style="padding:8px" id="delete-user" onclick="DeleteMember()">Delete Account</button>
@@ -593,10 +592,12 @@
           <div class="forms-in">
             <h2>EDIT PROFILE</h2>
             <br><br>
-            <label>Your Name: <span style="color:#ff6600">*</span></label>
+            <label>Your Name: <span style="color:#ff6600"></span></label>
             <input id="profile-name" placeholder="your name">
-            <label>Your Phone: <span style="color:#ff6600">*</span></label>
+            <label>Your Phone: <span style="color:#ff6600"></span></label>
             <input id="profile-phone" autocomplete="off" placeholder="your phone">
+			<label>Your URL Image (avatar): <span style="color:#ff6600"></span></label>
+            <input id="profile-url" autocomplete="off" placeholder="your phone">
             <button style="width:150px !important;margin-bottom:20px" onclick="CangeProfile()">Change Now</button>
             <button style="width:150px !important;" onclick="CallModalChangeProfileHide()" >Cancel</button>
           </div>
