--- a/login/index.html
+++ b/login/index.html
@@ -555,7 +555,7 @@
     <div id="myProfile" class="modal-profile">
       <div id="homepage" style="width: 700px;" class="modal-content">
 	    <div  class="avatar">
-		<img id="avatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png">
+		<img id="avatar" src="">
 		</div>
         <span style="font-weight:bold; font-size:25px; color:#fff">PROFILE - <span id="profile-email" style="color:#fff"></span></span>
         <br><br>
