--- a/login/index.html
+++ b/login/index.html
@@ -596,8 +596,8 @@
             <input id="profile-name" placeholder="your name">
             <label>Your Phone: <span style="color:#ff6600"></span></label>
             <input id="profile-phone" autocomplete="off" placeholder="your phone">
-			<label>Your URL Image (avatar): <span style="color:#ff6600"></span></label>
-            <input id="profile-url" autocomplete="off" placeholder="your phone">
+			<label>Your Image URL: <span style="color:#ff6600"></span></label>
+            <input id="profile-url" autocomplete="off" placeholder="your image URL">
             <button style="width:150px !important;margin-bottom:20px" onclick="CangeProfile()">Change Now</button>
             <button style="width:150px !important;" onclick="CallModalChangeProfileHide()" >Cancel</button>
           </div>
