--- a/login/index.html
+++ b/login/index.html
@@ -563,7 +563,7 @@
         <span style="font-weight:bold;font-size:14px">E-MAIL IDENTIFIER : <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">E-MAIL AUTH: <span id="email_Verified"></span></span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br><br>
 		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="your-name">n/a</span></span><br><br>
-		<span style="font-weight:bold; font-size:14px">CONTACT / WHATSAPP : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br><br>
+		<span style="font-weight:bold; font-size:14px">PHONE NUMBER : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br><br>
         <button style="padding:8px" id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
 		<button style="padding:8px" onclick="CallModalChangePasswordShow()">Change Password</button>
         <button style="padding:8px" id="delete-user" onclick="DeleteMember()">Delete Account</button>
