--- a/mikrotik-pcq-generator.html
+++ b/mikrotik-pcq-generator.html
@@ -430,11 +430,11 @@
             <div id="registration-page" class="hide">
               <h2>SIGN UP</h2>
               <br><br>
-              <label>E-Mail</label>
+              <label>E-Mail <span style="color:#ff6600">*</span></label>
               <input type="email" id="registration-email" placeholder="E-Mail">
-              <label>Confirm E-mail</label> 
+              <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
               <input type="email" id="registration-reemail" autocomplete="off" placeholder="Confirm E-Mail">
-              <label>Password <span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
+              <label>Password <span style="color:#ff6600">*</span><span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
               <input type="password" id="registration-password" placeholder="Password">
               <button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
