--- a/login/index.html
+++ b/login/index.html
@@ -318,7 +318,7 @@
       /* Hidden by default */
       position: fixed;
       /* Stay in place */
-      z-index: 2;
+      z-index: 10;
       /* Sit on top */
       padding-top: 150px;
       /* Location of the box */
@@ -340,7 +340,7 @@
       /* Hidden by default */
       position: fixed;
       /* Stay in place */
-      z-index: 3;
+      z-index: 1;
       /* Sit on top */
       padding-top: 150px;
       /* Location of the box */
@@ -385,7 +385,7 @@
       /* Hidden by default */
       position: fixed;
       /* Stay in place */
-      z-index: 10;
+      z-index: 5;
       /* Sit on top */
       padding-top: 80px;
       /* Location of the box */
@@ -408,7 +408,7 @@
       /* Hidden by default */
       position: fixed;
       /* Stay in place */
-      z-index: 10;
+      z-index: 5;
       /* Sit on top */
       padding-top: 80px;
       /* Location of the box */
@@ -562,8 +562,8 @@
         
         <span style="font-weight:bold;font-size:14px">E-MAIL IDENTIFIER : <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">E-MAIL AUTH: <span id="email_Verified"></span></span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br><br>
-		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="your-name">n/a</span></span><br><br>
-		<span style="font-weight:bold; font-size:14px">PHONE NUMBER : <span style="color:#ff6600;font-weight:bold;" id="user-contact">n/a</span></span><br><br><br>
+		<span style="font-weight:bold; font-size:14px">YOUR NAME : <span style="color:#ff6600;font-weight:bold;" id="your-name"></span></span><br><br>
+		<span style="font-weight:bold; font-size:14px">PHONE NUMBER : <span style="color:#ff6600;font-weight:bold;" id="user-contact"></span></span><br><br><br>
         <button style="padding:8px" id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
 		<button style="padding:8px" onclick="CallModalChangePasswordShow()">Change Password</button>
         <button style="padding:8px" id="delete-user" onclick="DeleteMember()">Delete Account</button>
