--- a/login/index.html
+++ b/login/index.html
@@ -574,7 +574,7 @@
       <div style="width: 400px;" class="modal-content">
         <div class="forms-out">
           <div class="forms-in">
-            <h2>CHANGE PASSWORD</h2>
+            <h2>SET PASSWORD</h2>
             <br><br>
             <label>New Password <span style="color:#ff6600">*</span></label>
             <input type="password" id="new-password" placeholder="New Password">
