--- a/simple-queue-generator-shared.html
+++ b/simple-queue-generator-shared.html
@@ -412,7 +412,7 @@
         <div class="forms-out">
           <div class="forms-in">
             <div id="registration-page" class="hide">
-              <h2>SIGN UP</h2>
+              <h2>SIGN UP</h2><br>
               <br><br>
               <label>E-Mail <span style="color:#ff6600">*</span></label>
               <input type="email" id="registration-email" placeholder="E-Mail">
