--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -465,11 +465,11 @@
               <h2>SIGN UP</h2><br>
               <br><br>
               <label>E-Mail <span style="color:#ff6600">*</span></label>
-              <input type="email" id="registration-email" placeholder="E-Mail">
+              <input style="margin-top:5px" type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
-              <input type="email" id="registration-reemail" autocomplete="off" placeholder="Confirm E-Mail">
+              <input style="margin-top:5px" type="email" id="registration-reemail" autocomplete="off" placeholder="Confirm E-Mail">
               <label>Password <span style="color:#ff6600">*</span><span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
-              <input type="password" id="registration-password" placeholder="Password">
+              <input style="margin-top:5px" type="password" id="registration-password" placeholder="Password">
               <button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
               <br>
@@ -482,9 +482,9 @@
               </span>
               <br><br><br>
               <label>E-Mail</label>
-              <input type="email" id="login-email" placeholder="E-Mail">
+              <input style="margin-top:5px" type="email" id="login-email" placeholder="E-Mail">
               <label>Password</label>
-              <input type="password" id="login-password" placeholder="Password">
+              <input style="margin-top:5px" type="password" id="login-password" placeholder="Password">
               <button style="width:100% !important;" id="login">Login</button>
               <span style="font-weight:normal"> <span id="forgot-password">Forgot Password?</span></span>
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
