--- a/login/index.html
+++ b/login/index.html
@@ -579,7 +579,7 @@
             <br><br>
             <label>New Password <span style="color:#ff6600">*</span></label>
             <input type="password" id="new-password" placeholder="New Password">
-            <label>Confirm Password <span style="color:#ff6600">*</span></label>
+            <label>Confirm New Password <span style="color:#ff6600">*</span></label>
             <input type="password" id="re-new-password" autocomplete="off" placeholder="Confirm New Password">
             <button style="width:150px !important;margin-bottom:20px" id="change-pass-button">Save</button>
             <button style="width:150px !important;" onclick="CallModalChangePasswordHide()" >Cancel</button>
