--- a/login/index.html
+++ b/login/index.html
@@ -564,11 +564,11 @@
 		<span style="font-weight:bold; font-size:14px">USER UID <span style="margin-left:70px;margin-right:6px">:</span> <span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
 		<span style="font-weight:bold; font-size:14px">YOUR NAME <span style="margin-left:48px;margin-right:6px">:</span> <span style="color:#ff6600;font-weight:bold;" id="your-name"></span></span>
 		<br><br><br>
-		<button style="padding:6px; width:124px" id="edit-user" onclick="location.href = 'https://buananetpbun.github.io'">Back Home</button>
-        <button style="padding:6px; width:124px" id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
-		<button style="padding:6px; width:124px " onclick="CallModalChangePasswordShow()">Set Password</button>
-        <button style="padding:6px; width:124px" id="delete-user" onclick="DeleteMember()">Delete Account</button>
-		<button style="margin-bottom:10px;padding:6px;width:100px" id="signout">Logout</button>
+		<button style="padding:6px; width:124px; font-weight:normal" id="edit-user" onclick="location.href = 'https://buananetpbun.github.io'">Back Home</button>
+        <button style="padding:6px; width:124px; font-weight:normal" id="edit-user" onclick="CallModalChangeProfileShow()">Edit Profile</button>
+		<button style="padding:6px; width:124px; font-weight:normal " onclick="CallModalChangePasswordShow()">Set Password</button>
+        <button style="padding:6px; width:124px; font-weight:normal" id="delete-user" onclick="DeleteMember()">Delete Account</button>
+		<button style="margin-bottom:10px;padding:6px;width:100px; font-weight:normal" id="signout">Logout</button>
       </div>
     </div>
     <div id="myChangePassword" class="modal-change-password">
