--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       word-wrap: break-word;
       margin:0;
       padding:0;
+	  color:#333;
       }
-      h1, h2 {font-size: 50px; margin-bottom:0px; color:#111;display:inline;line-height:1.4;clear:both}
+      h1, h2 {font-size: 50px; margin-bottom:0px; color:#333;display:inline;line-height:1.4;clear:both}
       h3, h4, h5, h6{font-size: 20px; border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px; line-height:1.4}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
@@ -48,7 +49,7 @@
       white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
       word-wrap: break-word; /* IE 5.5+ */
       }
-      b{font-size:17px}
+      b{font-size:16px}
       p {
       padding:0;
       margin:5px 5px 0 17px;
@@ -122,7 +123,7 @@
       padding:15px;
       clear:both;
       }
-      h1, h2 {font-size: 30px; margin-bottom:20px; color:#111;display:inline;line-height:1.5;clear:both}
+      h1, h2 {font-size: 30px; margin-bottom:20px; color:#333;display:inline;line-height:1.5;clear:both}
       }  
       .resp-sharing-button__link,
       .resp-sharing-button__icon {
