--- a/login/index.html
+++ b/login/index.html
@@ -18,30 +18,15 @@
       # Sosmed    : https://fb.me/buananetmikrotik	
       ####################################################################
       -------------------------------------------------------------------- */  
-      body {
-      background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;
-      font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
-      font-size: 16px;
-      line-height:normal;    
-      word-wrap: break-word;
-      margin:0;
+      *{-webkit-transition: all .3s ease-in;-moz-transition: all .3s ease-in;-ms-transition: all .3s ease-in;transition: all .3s ease-in;}
+      body, div, span, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, textarea, p, blockquote, th, td, tr, table{margin:0; padding:0}
+      body { font-size:14px; font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; margin:0px;}
+      html, body {
+      height: 100%;
+      width:100%;
+      margin-top: 0px;
       padding:0;
-      }
-      h1, h2 {font-size: 50px; margin-bottom:0px; color:#333;display:inline;line-height:1.4;clear:both}
-      h3, h4, h5, h6{font-size: 20px; border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px; line-height:1.4}
-      pre {
-      white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
-      white-space: -pre-wrap; /* Opera */
-      white-space: -o-pre-wrap; /* Opera */
-      white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
-      word-wrap: break-word; /* IE 5.5+ */
-      }
-      b{font-size:17px}
-      p {
-      padding:0;
-      margin:5px 5px 0 17px;
-      display:list-item;
-      list-style: disc;
+      background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;     
       }
       * {
       box-sizing: border-box;
