--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -613,6 +613,7 @@
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
             </div>
           </div>
+		  <span style="font-size:10px; color:#777" id="countdown"></span>
         </div>
       </div>
     </div>
