--- a/queue-tree-generator-shared.html
+++ b/queue-tree-generator-shared.html
@@ -446,7 +446,9 @@
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
             </div>
           </div>
-		  <span style="font-size:10px; color:#777" id="countdown"></span>
+		  		  <div style="clear:both"></div>
+			<div style="color:#888; text-align: center !important; font-size:11px; font-weight:normal">By continuing, you are indicating that you accept our<br><u>Terms of Service</u> and <u>Privacy Policy.</u></div>
+		  <div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown"></div>
         </div>
       </div>
     </div>
