--- a/login/index.html
+++ b/login/index.html
@@ -635,6 +635,8 @@
               <span style="font-weight:normal"> <span id="forgot-password">Forgot Password?</span></span>
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
             </div>
+			<div style="clear:both"></div>
+			<div style="color:#888; text-align: center !important; font-size:11px; font-weight:normal">By continuing, you are indicating that you accept our<br><u>Terms of Service</u> and <u>Privacy Policy.</u></div>
           </div>
         </div>
       </div>
