--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -415,8 +415,8 @@
               <span id="google-sign-in">Sign-In with Google</span>
 			  </div>		  
             <div id="registration-page" class="hide">
-              <h2>SIGN UP</h2><br>
-              <br><br>
+            <h2>SIGN UP</h2>
+			  <br><br><br>
               <label>E-Mail <span style="color:#ff6600">*</span></label>
               <input type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
