--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -427,8 +427,8 @@
               <span id="google-sign-in">Sign-In with Google</span>
 			  </div>			  
             <div id="registration-page" class="hide">
-              <h2>SIGN UP</h2><br>
-              <br><br>
+           <h2>SIGN UP</h2>
+			<br><br><br>
               <label>E-Mail <span style="color:#ff6600">*</span></label>
               <input type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
@@ -440,7 +440,7 @@
               <br>
             </div>
             <div id="login-page">
-              <h2>SIGN IN</h2>
+             <h2>SIGN IN</h2>
               <br><br><br>
               <label>E-Mail</label>
               <input type="email" id="login-email" placeholder="E-Mail">
