--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -466,8 +466,8 @@
               <span id="google-sign-in">Sign-In with Google</span>
 			  </div>			  
             <div id="registration-page" class="hide">
-              <h2>SIGN UP</h2><br>
-              <br><br>
+           <h2>SIGN UP</h2>
+			<br><br><br>
               <label>E-Mail <span style="color:#ff6600">*</span></label>
               <input style="margin-top:5px" type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
@@ -479,7 +479,7 @@
               <br>
             </div>
             <div id="login-page">
-              <h2>SIGN IN</h2>
+             <h2>SIGN IN</h2>
               <br><br><br>
               <label>E-Mail</label>
               <input style="margin-top:5px" type="email" id="login-email" placeholder="E-Mail">
