--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -2007,8 +2007,8 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
               </span>         
 		  <div class="forms-in">
             <div id="registration-page" class="hide">
-              <h2>SIGN UP</h2><br>
-              <br><br>
+           <h2>SIGN UP</h2>
+			<br><br><br>
               <label>E-Mail <span style="color:#ff6600">*</span></label>
               <input type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail <span style="color:#ff6600">*</span></label> 
@@ -2020,7 +2020,7 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
               <br>
             </div>
             <div id="login-page">
-              <h2>SIGN IN</h2>
+             <h2>SIGN IN</h2>
               <br><br><br>
               <label>E-Mail</label>
               <input type="email" id="login-email" placeholder="E-Mail">
