--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
             </div>
           </div>
 		  <div style="clear:both"></div>
-		<div style="color:#888; text-align: center !important; font-size:11px; font-weight:normal">By continuing, you are indicating that you accept our<br><u>Terms of Service</u> and <u>Privacy Policy.</u></div>
+		<div style="color:#888; text-align: center !important; font-size:11px; font-weight:normal;margin-top:12px">By continuing, you are indicating that you accept our<br><u>Terms of Service</u> and <u>Privacy Policy.</u></div>
         </div>
       </div>
     </div>
