--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -527,7 +527,7 @@
             </div>
           </div>
 		  		  <div style="clear:both"></div>
-			<div style="color:#888; text-align: center !important; font-size:11px; font-weight:normal">By continuing, you are indicating that you accept our<br><u>Terms of Service</u> and <u>Privacy Policy.</u></div>
+			<div style="color:#888; text-align: center !important; font-size:11px; font-weight:normal;margin-top:12px">By continuing, you are indicating that you accept our<br><u>Terms of Service</u> and <u>Privacy Policy.</u></div>
 		  <div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown"></div>
         </div>
       </div>
